fix meal section's - remove line-height unit, text-align and margin-bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@
 /* MEALS SECTION */
 /*******************************/
 .section-meal {
-  padding: 4.8rem 0 3.2rem 0;
+  padding: 9.6rem 0;
 }
 
 .meal {
@@ -462,7 +462,7 @@
 
 .plan-details {
   font-size: 1.6rem;
-  line-height: 1.6rem;
+  line-height: 1.6;
   text-align: center;
 }
 
@@ -483,7 +483,7 @@
 }
 .feature-text {
   font-size: 1.8rem;
-  line-height: 1.8rem;
+  line-height: 1.8;
 }
 
 /*******************************/
@@ -514,7 +514,7 @@
 }
 .cta-text {
   font-size: 1.8rem;
-  line-height: 1.8rem;
+  line-height: 1.8;
   margin-bottom: 4.8rem;
 }
 
